src/parse/snapshots/blis__parse__lexer__tests__test_programs__err_compile__self_outside_method_script.blis.tokens.snap
---
source: src/parse/lexer.rs
description: "self;\n"
input_file: test_programs/err_compile/self_outside_method_script.blis
---
[
  Lexeme(
    token: Self_,
    text: "self",
    line: 1,
  ),
  Lexeme(
    token: Semicolon,
    text: ";",
    line: 1,
  ),
  Lexeme(
    token: Eof,
    text: "",
    line: 2,
  ),
]
